# snbackup

./: .gitignore  LICENSE  README.html  README.md  config.json  pyproject.toml
.github/workflows/: pytests.yml
snbackup/: __main__.py  backup.py  device.py  files.py  helpers.py  notes.py  setup.py  utilities.py
src/: __main__.py  backup.py
tests/: test_backup.py  test_helpers.py  test_notes.py  test_setup.py  test_snfile.py  test_snfiles.py
