[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snbackup"
version = "1.3.2"
authors = [
  { name="devdevindev", email="devinwrx@gmail.com" },
]
description = "CLI tool to backup Supernote note files"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "httpx"
]

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "ruff"
]

[project.scripts]
snbackup = "snbackup.__main__:main"

[project.urls]
Homepage = "https://github.com/theburningbush/snbackup"
Issues = "https://github.com/theburningbush/snbackup/issues"